--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,16 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-     
         <activity
-            android:name="com.codepath.apps.restclienttemplate.LoginActivity"
-            android:theme="@style/AppTheme"
-            android:label="@string/app_name" >
+            android:name=".ComposeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TimelineActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
